# AI

./: .gitignore  README.md  mand2.tex
MapLoading/: main.nxc  main.nxc~
Maploading/Graph+Maploading/: edge.cpp  edge.h  graph.cpp  graph.h  main.cpp  sokoban.cpp  sokoban.h  vertex.cpp  vertex.h
Maploading/src/: CMakeLists.txt  main.cpp  main.cpp~
Maploading/tree/: .flickrExclusion
Path/: kiddi.txt  main.nxc  main.nxc~
build-sokoban_solver_v2-Desktop-Default/With_deadlock/: massif.out.34817
build-sokoban_solver_v2-Desktop-Default/Without_deadock/: massif.out.34762
line_follower/: line_follower  line_follower.nxc
mand2/: README.md  mand2.aux  mand2.tex
sokoban_solver/: CMakeLists.txt
sokoban_solver/include/: a_star.hpp  sokoban.h  wavefront.hpp
sokoban_solver_v2/: CMakeLists.txt
sokoban_solver_v2/include/: a_star.hpp  sokoban_map.hpp  wavefront.hpp
sokoban_solver_v2/maps/: heuristictest.txt  linemap.txt  minimap.txt  tridia.txt
sokoban_solver_v2/report/: bib.tex  main.tex
sokoban_solver_v2/report/images/: Memory_usage.eps  Memory_usage_1.eps  competitionmap.eps  deadlockImprovement.eps  deadlock_corner_leftup.eps  deadlock_edge.eps  deadlock_opposite.eps  heuristictest.eps  memorymap.eps
sokoban_solver_v2/report/sections/: deadlock_detection.tex  introduction.tex  robot.tex  solver.tex  titlepage.tex
sokoban_solver_v2/src/: a_star.cpp  main.cpp  sokoban_map.cpp  wavefront.cpp
sokoban_solverv1/: Makefile  log.txt  main.cpp  output.txt  sokoban.cpp  sokoban.h  sokoban_solverv1  sokoban_solverv1.pro
test/: main.nxc  main.nxc~
(+10 files in other folders)
